@@ -158,6 +158,12 @@ Version 8.37 xx-xxx-2015
     other cases where backtracking after \C could crash. This set of bugs was
     discovered by the LLVM fuzzer.
 
+20. The function for finding the minimum length of a matching string could take
+    a very long time if mutual recursion was present many times in a pattern,
+    for example, /((?2){73}(?2))((?1))/. A better mutual recursion detection
+    method has been implemented. This infelicity was discovered by the LLVM
+    fuzzer.
+
 
 Version 8.36 26-September-2014
 ------------------------------
